datasets/labels/v1/manifest.md
# Label dataset v1

7 games · 110 labelled frames · 600 boxes · 48 read-values (text/health).
Frames live in `runs/<game>/` (corpus, gitignored); these JSONs are the annotations.

| game | frames | avatar | enemy | item | text | health | exit | npc | values | modes |
|---|---|---|---|---|---|---|---|---|---|---|
| 2026-06-23_cavenoire_explore | 50 | 47 | 16 | 60 | 78 | 42 | 40 | 0 | 21 | gameplay:40,menu:8,transition:2 |
| 2026-06-23_gauntlet_ramplay | 10 | 8 | 29 | 6 | 43 | 0 | 2 | 0 | 8 | gameplay:9,menu:1 |
| 2026-06-23_kirby_ramplay | 10 | 8 | 11 | 0 | 12 | 19 | 0 | 0 | 11 | gameplay:9,menu:1 |
| 2026-06-23_metroid_ramplay | 10 | 9 | 2 | 1 | 14 | 0 | 0 | 0 | 5 | gameplay:8,menu:1,transition:1 |
| 2026-06-23_red_resume | 10 | 3 | 0 | 0 | 40 | 8 | 0 | 0 | 0 | menu:10 |
| 2026-06-23_spaceinv_auto | 10 | 8 | 10 | 0 | 10 | 8 | 0 | 0 | 3 | gameplay:8,menu:1,transition:1 |
| 2026-06-23_zelda_explore | 10 | 6 | 1 | 5 | 48 | 6 | 0 | 0 | 0 | gameplay:6,menu:3,transition:1 |
| **TOTAL** | **110** | **89** | **69** | **72** | **245** | **83** | **42** | **0** | **48** | gameplay:80,menu:25,transition:5 |
